--- a/sil.html
+++ b/sil.html
@@ -2,85 +2,85 @@
 <html class="en">
    <head>
       <meta charset="utf-8">
-      <title>Stuff I Like</title>
-      <meta name="description" content="">
-          <meta name=viewport content="width=device-width, initial-scale=1">
-              <meta name="mobile-web-app-capable" content="yes">
-                  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-                  <meta http-equiv="Pragma" content="no-cache" />
-                  <meta http-equiv="Expires" content="0" />
-                  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-                  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-                  <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
-                      <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
-                          <link rel="stylesheet" type="text/css" href="semantic-ui/components/site.css">
-                              <link rel="stylesheet" type="text/css" href="semantic-ui/components/container.css">
-                                  <link rel="stylesheet" type="text/css" href="semantic-ui/components/grid.css">
-                                      <link rel="stylesheet" type="text/css" href="semantic-ui/components/header.css">
-                                          <link rel="stylesheet" type="text/css" href="semantic-ui/components/image.css">
-                                              <link rel="stylesheet" type="text/css" href="semantic-ui/components/menu.css">
-                                                  <link rel="stylesheet" type="text/css" href="semantic-ui/components/accordion.css">
-                                                      <link rel="stylesheet" type="text/css" href="semantic-ui/components/divider.css">
-                                                          <link rel="stylesheet" type="text/css" href="semantic-ui/components/dropdown.css">
-                                                              <link rel="stylesheet" type="text/css" href="semantic-ui/components/segment.css">
-                                                                  <link rel="stylesheet" type="text/css" href="semantic-ui/components/button.css">
-                                                                      <link rel="stylesheet" type="text/css" href="semantic-ui/components/list.css">
-                                                                          <link rel="stylesheet" type="text/css" href="semantic-ui/components/icon.css">
-                                                                              <link rel="stylesheet" type="text/css" href="semantic-ui/components/sidebar.css">
-                                                                                  <link rel="stylesheet" type="text/css" href="semantic-ui/components/transition.css">
-                                                                                      <link rel="stylesheet" type="text/css" href="index.css">
-                                                                                          <style>
-                                                                                              .ui.inverted.vertical.footer.segment {
-                                                                                                  background-image: none;
-                                                                                                  background-color: C0C0C0;
-                                                                                              }
-                                                                                          .ui.inverted.menu {
-                                                                                              background-color: C0C0C0;
-                                                                                          }
-                                                                                          .ui.large.top.fixed.menuC0C0C0{
-                                                                                              background-color: #2185D0;
-                                                                                          }
-                                                                                          .ui.huge.primary.button {
-                                                                                              margin-top: 1%;
-                                                                                          }
-                                                                                          .ui.stackable.inverted.divided.equal.height.stackable.grid {
-                                                                                              padding-left: 5%;
-                                                                                              padding-right: 5%
-                                                                                          }
-                                                                                          .ui.large.inverted.pointing.menu .item {
-                                                                                              padding: 2%;
-                                                                                          }
-                                                                                          .ui.huge.primary.button a {
-                                                                                              color: #ffffff;
-                                                                                          }
-                                                                                          .ui.styled.accordion, .ui.styled.accordion .accordion {
-                                                                                              background-color: C0C0C0;
-                                                                                              color: #ffffff;
-                                                                                              font-weight: normal;
-                                                                                              border: none;
-                                                                                              box-shadow: none;
-                                                                                          }
-                                                                                          .ui.styled.accordion .title, .ui.styled.accordion .title:hover, .ui.styled.accordion .active.title {
-                                                                                              color: #ffffff;
-                                                                                              font-weight: normal;
-                                                                                              border: none;
-                                                                                              box-shadow: none;
-                                                                                          }
-                                                                                          .ui.inverted.pointing.menu .active.item:after {
-                                                                                              background-color:C0C0C0 !important;
-                                                                                          }
-                                                                                          .ui.inverted.pointing.menu .active.item:hover:after {
-                                                                                              background-color: #ffffff !important;
-                                                                                          }
-                                                                                          .content > .accordion .title, .content > .accordion .title:hover, .content > .accordion .active.title {
-                                                                                              background-color: C0C0C0 !important;
-                                                                                              color: #ffffff !important;
-                                                                                              font-weight: normal !important;
-                                                                                              border: none !important;
-                                                                                              box-shadow: none !important;
-                                                                                          }
-                                                                                          </style>
-                                                                                          </head>
+      <title>Exchange Essays</title>
+            <meta name="description" content="">
+      <meta name=viewport content="width=device-width, initial-scale=1">
+      <meta name="mobile-web-app-capable" content="yes">
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+      <meta http-equiv="Pragma" content="no-cache" />
+      <meta http-equiv="Expires" content="0" />
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/site.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/container.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/grid.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/header.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/image.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/menu.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/accordion.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/divider.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/dropdown.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/segment.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/button.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/list.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/icon.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/sidebar.css">
+      <link rel="stylesheet" type="text/css" href="semantic-ui/components/transition.css">
+      <link rel="stylesheet" type="text/css" href="index.css">
+      <style>
+         .ui.inverted.vertical.footer.segment {
+         background-image: none;
+         background-color: C0C0C0;
+         }
+         .ui.inverted.menu {
+         background-color: C0C0C0;
+         }
+         .ui.large.top.fixed.menuC0C0C0{
+         background-color: #2185D0;
+         }
+         .ui.huge.primary.button {
+         margin-top: 1%;
+         }
+         .ui.stackable.inverted.divided.equal.height.stackable.grid {
+         padding-left: 5%;
+         padding-right: 5%
+         }
+         .ui.large.inverted.pointing.menu .item {
+         padding: 2%;
+         }
+         .ui.huge.primary.button a {
+         color: #ffffff;
+         }
+         .ui.styled.accordion, .ui.styled.accordion .accordion {
+         background-color: C0C0C0;
+         color: #ffffff;
+         font-weight: normal;
+         border: none;
+         box-shadow: none;
+         }
+         .ui.styled.accordion .title, .ui.styled.accordion .title:hover, .ui.styled.accordion .active.title {
+         color: #ffffff;
+         font-weight: normal;
+         border: none;
+         box-shadow: none;
+         }
+         .ui.inverted.pointing.menu .active.item:after {
+         background-color:C0C0C0 !important;
+         }
+         .ui.inverted.pointing.menu .active.item:hover:after {
+         background-color: #ffffff !important;
+         }
+         .content > .accordion .title, .content > .accordion .title:hover, .content > .accordion .active.title {
+         background-color: C0C0C0 !important;
+         color: #ffffff !important;
+         font-weight: normal !important;
+         border: none !important;
+         box-shadow: none !important;
+         }
+      </style>
+   </head>
    <body>
        <!-- Page Contents -->
        <div class="pusher">
@@ -96,8 +96,8 @@
                            Personal Essay Collection
                            <i class="dropdown icon"></i>
                            <div class="menu">
-                               <a class="item" href="code.html">Code Essays</a>
                                <a class="item" href="exchange.html">Exchange Essays</a>
+                               <a class="item" href="code.html">Code Essays</a>
                            </div>
                        </div>
                        <div class="ui dropdown item">
@@ -127,6 +127,7 @@
             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b></p>
             <p>If you don't find them on other parts of my site, you will find them here. Links open in a new tab.</p>
             <ul>
+                <li><a href="https://en.wikipedia.org/wiki/Surely_You%27re_Joking,_Mr._Feynman!" target="_blank">Surley You're Joking, Mr. Feynman</a> (This is my favourite book)</li>
                 <li><a href="http://aesthetically-obsessed.tumblr.com/" target="_blank">Aesthetic Autismics</a></li>
                 <li><a href="http://xkcd.com/" target="_blank">XKCD</a></li>
                 <li><a href="http://www.getequal.org/blog/who-said-this-a-kkk-member-or-a-gop-presidential-candidate" target="_blank">#KKKorGOP?</a></li>
