--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                      <h3 class="ui header">My Projects</h3>
                      <p>On this site you will find information about my recent projects. I have been working on various projects, such as volunteering as an assistant instructor for ASRA, building severall different MicroMouse robots, and working with game design and WebGL shaders.</p>
                      <h3 class="ui header">Site information</h3>
-                     <p>This site was created using <a href="http://semantic-ui.com/" target="_blank">Semantic UI</a> and is hosted by <a href="https://pages.github.com/" target="_blank">Github Pages</a>. The domain name service is provided by <a href="https://www.namecheap.com/" target="_blank">NameCheap</a>. Links open in a new tab. If you find any problems with this site, or have any questions, feel free to contact me <a href="mailto:jasper@holton.io" target="_blank">here</a>.</p>
+                     <p>This site was created using <a href="http://semantic-ui.com/" target="_blank">Semantic UI</a> and is hosted by <a href="https://pages.github.com/" target="_blank">Github Pages</a>. The domain name service is provided by <a href="https://www.namecheap.com/" target="_blank">NameCheap</a>. All links automatically open in a new tab. This site uses <a href="http://www.google.com/analytics/" target="_blank">Google Analytics</a>. If you find any problems with this site, or have any questions, feel free to contact me <a href="mailto:jasper@holton.io" target="_blank">here</a>.</p>
                   </div>
                   <div class="seven wide right floated column">
                      <img src="images/robotics.jpg" class="ui large bordered rounded image">
