--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
          box-shadow: none !important;
          }
       </style>
+      <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+      <script>
+          $(function(){
+            $("#mainmenu").load("mainmenu.html");
+            });
+          $(function(){
+            $("#footer").load("footer.html");
+          });
+      </script>
    </head>
    <body>
       <!-- Page Contents -->
@@ -113,37 +123,39 @@
          <div class="ui inverted vertical masthead center aligned segment">
             <!-- Main Menu-->
             <div class="ui container">
-               <div class="ui large inverted pointing menu">
-                  <a class="toc item">
-                  <i class="sidebar icon"></i>
-                  </a>
-                  <a class="item">Home</a>
-                  <div class="ui dropdown item">
-                     Personal Essay Collection
-                     <i class="dropdown icon"></i>
-                     <div class="menu">
-                        <a class="item" href="exchange.html">Exchange Essays</a>
-                        <a class="item" href="code.html">Code Essays</a>
-                     </div>
-                  </div>
-                  <div class="ui dropdown item">
-                     Projects
-                     <i class="dropdown icon"></i>
-                     <div class="menu">
-                        <a class="item" href="http://uafasra.github.io/2015module_comp-sci/" target="_blank">ASRA 2015</a>
-                        <a class="item" href="http://www.instructables.com/id/Easy-Adjustable-Speed-Pocket-Fan/" target="_blank">Speed Adjust Fan</a>
-                        <a class="item" href="projects/Crimson-Deep/Game.html" target="_blank">Indev Phaser Game</a>
-                        <a class="item" href="shaders/sloth/index.html" target="_blank">Shader</a>
-                        <a class="item" href="shaders/storm/index.html" target="_blank">Storm</a>
-                        <a class="item" href="shaders/fractals/index.html" target="_blank">Fractals</a>
-                        <a class="item" href="shaders/fire/index.html" target="_blank">Fire</a>
-                        <a class="item" href="shaders/scope/index.html" target="_blank">Scope</a>
-                     </div>
-                  </div>
-                  <a class="item" href="sil.html">SIL(new)</a>
-                  <a class="item" href="https://github.com/jcholton">Github</a>
-               </div>
+                <div class="ui large inverted pointing menu">
+                    <a class="toc item">
+                        <i class="sidebar icon"></i>
+                    </a>
+                    <a class="item">Home</a>
+                    <div class="ui dropdown item">
+                        Personal Essay Collection
+                        <i class="dropdown icon"></i>
+                        <div class="menu">
+                            <a class="item" href="exchange.html">Exchange Essays</a>
+                            <a class="item" href="code.html">Code Essays</a>
+                        </div>
+                    </div>
+                    <div class="ui dropdown item">
+                        Projects
+                        <i class="dropdown icon"></i>
+                        <div class="menu">
+                            <a class="item" href="http://uafasra.github.io/2015module_comp-sci/" target="_blank">ASRA 2015</a>
+                            <a class="item" href="http://www.instructables.com/id/Easy-Adjustable-Speed-Pocket-Fan/" target="_blank">Speed Adjust Fan</a>
+                            <a class="item" href="projects/Crimson-Deep/Game.html" target="_blank">Indev Phaser Game</a>
+                            <a class="item" href="shaders/sloth/index.html" target="_blank">Shader</a>
+                            <a class="item" href="shaders/storm/index.html" target="_blank">Storm</a>
+                            <a class="item" href="shaders/fractals/index.html" target="_blank">Fractals</a>
+                            <a class="item" href="shaders/fire/index.html" target="_blank">Fire</a>
+                            <a class="item" href="shaders/scope/index.html" target="_blank">Scope</a>
+                        </div>
+                    </div>
+                    <a class="item" href="sil.html">SIL(new)</a>
+                    <a class="item" href="https://github.com/jcholton">Github</a>
+                </div>
             </div>
+            
+            
             <div class="ui text container">
                <h1 class="ui block medium inverted header">
                   Jasper Holton
@@ -182,28 +194,11 @@
                </div>
             </div>
          </div>
-         <div class="ui inverted vertical footer segment">
-            <div class="ui container">
-               <div class="ui stackable inverted divided equal height stackable grid">
-                  <div class="three wide column">
-                     <h4 class="ui inverted header">Find me</h4>
-                     <div class="ui inverted link list">
-                        <a href="mailto:jasper@holton.io" class="item" target="_blank">Contact Me</a>
-                        <a href="http://github.com/jcholton" class="item" target="_blank">Github Page</a>
-                        <a href="https://www.youtube.com/user/wenikalla/" class="item" target="_blank">YouTube</a>
-                        <a href="http://stackoverflow.com/users/2225373/jasper-holton" class="item" target="_blank">StackOverFlow</a>
-                     </div>
-                  </div>
-                  <div class="seven wide column">
-                     <h4 class="ui inverted header">About This Page</h4>
-                     <p>"On résiste à l'invasion des armées; on ne résiste pas à l'invasion des idées." - Victor Hugo</p>
-                  </div>
-               </div>
-            </div>
-         </div>
       </div>
    </body>
-   <footer></footer>
+   <footer>
+       <div id="footer"></div>
+   </footer>
    <foot>
       <script type="text/javascript" src="semantic-ui/jquery-2.1.4.min.js"></script>
       <script type="text/javascript" src="semantic-ui/semantic.min.js"></script>
