--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="en">
    <head>
       <meta charset="utf-8">
-      <title>Home</title>
+      <title>Jasper Holton</title>
       <meta name="description" content="">
       <meta name=viewport content="width=device-width, initial-scale=1">
       <meta name="mobile-web-app-capable" content="yes">
