--- a/sil.html
+++ b/sil.html
@@ -135,7 +135,7 @@
                            </div>
                        </div>
                        <a class="item" href="sil.html">SIL(new)</a>
-                       <a class="item" href="https://github.com/jcholton">Github</a>
+                       <a class="item" href="https://github.com/jcholton/jcholton.github.io" target="_blank">Github</a>
                    </div>
                </div>
            </div>
