New (short) Essay and pictures!

--- a/exchange.html
+++ b/exchange.html
@@ -161,6 +161,21 @@
          </div>
          
          <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Airshow in Wesel</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 22, 2015</p>
+                 <p>Surviving my first week of school turned out to not be as difficult as I thought. I was lost in many of my classes, but in some I am actually beginning to understand the material as my knowledge of German improves. I have been making new friends in and out of school, and having a really good time here in Wesel. This weekend there is a yearly airshow, where many small planes are shown off at the small, grassy runway strip near the Rhine. Among the planes were many skidivers, and I enjoyed watching them tumble through the air before gracefully gliding down to the ground.</p>
+                 <img src="images/airfield.jpg" class="ui large bordered rounded image">
+                 <img src="images/oldplane.jpg" class="ui large bordered rounded image">
+                 <img src="images/paragliders.jpg" class="ui large bordered rounded image">
+                 <img src="images/gliders.jpg" class="ui large bordered rounded image">
+                 <img src="images/stuntplane.jpg" class="ui large bordered rounded image">
+                 <img src="images/stuntplane2.jpg" class="ui large bordered rounded image">
+                 <img src="images/viewers.jpg" class="ui large bordered rounded image">
+                <p>(Above) People gathered from in and outside of Wesel to watch this airshow.</p>
+                <p>There's been a lot going on, and not much time to write, so I'm going to leave it at that.</p>
+         </div>
+         
+         <div class="ui raised very padded text container segment">
              <h2 class="ui header">School, Wesel, and Otto Pankok</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 19, 2015</p>
                  <p>I wasn't really sure what to expect of German school. It certainly wasn't the same as my school in Alaska, but it wasn't all that different either. The schedule was less consistent, with alternating classes and free periods scattered over the course of a week. Some days I don't start school until late morning, and some days I finish early in the afternoon. I found the layout of the school to be confusing, as the school had many new sections built onto the original building. However, with the help of some newly made friends, I was able to make it to all of my classes. The classes were a bit confusing, because my German knowledge is certainly lacking. Despite this, I was able to mostly follow what was going on just because of my previous experience with the subjects and the bits and pieces of language that I am beginning to understand.</p>
