--- a/exchange.html
+++ b/exchange.html
@@ -161,6 +161,21 @@
          </div>
          
          <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Welcome Weekend and Language School</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 31, 2015</p>
+                 <p>As I neared the end of my third week in Germany, it came time for me to go to a much anticipated event: The Rotex Welcome Weekend, where all of the exchange students from across this district of Germany meet up and talk about their exchange so far.</p>
+                 <img src="images/welcomeweekend.jpg" class="ui large bordered rounded image">
+                 <img src="images/meeting.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Pictures from the welcome weekend</p>
+                 <p>There were over 60 exchange students in the district, and we all met up on Saturday morning in the city of <a href="https://en.wikipedia.org/wiki/Mettmann" target="_blank">Mettmann</a>. We all met eachother, speaking largley Spanish, German and English. There were exchange students from all over the world, some of them who had been here for months already and some, like me, who were in their second or third week. We went to a museum in Mettmann, visited a swimming pool, and went to a festival in the evening. Then we stayed up until two in the morning playing games, dancing, conversing with eachother, and having a good time. We slept for a short while, and then (with some difficulty) awoke and said our goodbyes. It was sad to be returning back to my host city after meeting all these wonderful people, but I also will now be able to meet up with many of them again now that I have met them. Today I got what is known as a <a href="http://www.rheinbahn.de/tickets/uebersicht/Seiten/SchokoTicket.aspx" target="_blank">SchockoTicket</a>, which allows me to travel around in this area of Germany using the widley available public transport system.</p>
+                 <img src="images/SchockoTicket.jpg" class="ui large bordered rounded image">
+                 <p>(Above) My SchockoTicket</p>
+                 <p>After two weeks of German school, I quickly realized that I wasn't going to learn much at school before improving my German language skills. However, I still really enjoyed school because I was making new friends and having fun doing various activites even if I didn't understand much. Now, I am giving up school for a few weeks to take part in <a href="http://idaf-duesseldorf.de/?lang=en" target="_blank">IDaF</a>, an intensive German language school located in Dusseldorf. I get to Dusseldorf from Wesel by train, which is about an hour of travel each way. The language school starts at 9:00 and goes until 1:00 in the afternoon, and is very engaging and fun. Today was my first day at the language school, and I really enjoyed it. Though I was placed in a class slightly below my level, I can tell that in this school I will learn fast and well. I am very happy to be learning German more quickly, as this will allow me to better integrate with the culture and understand my school better. I will attend this language school daily for the next few months in replacement of normal school, but I will still take part in after school activities such as Orchestra.</p>
+                 <img src="images/dusseldorfstation.jpg" class="ui large bordered rounded image">
+                 <p>(Above) The crowded centeral railway station in Dusseldorf.</p>
+         </div>
+         
+         <div class="ui raised very padded text container segment">
              <h2 class="ui header">Airshow in Wesel</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 22, 2015</p>
                  <p>Surviving my first week of school turned out to not be as difficult as I thought. I was lost in many of my classes, but in some I am actually beginning to understand the material as my knowledge of German improves. I have been making new friends in and out of school, and having a really good time here in Wesel. This weekend there is a yearly airshow, where many small planes are shown off at the small, grassy runway strip near the Rhine. Among the planes were many skidivers, and I enjoyed watching them tumble through the air before gracefully gliding down to the ground.</p>
