Added to projects

--- a/exchange.html
+++ b/exchange.html
@@ -123,6 +123,8 @@
                      Projects
                      <i class="dropdown icon"></i>
                      <div class="menu">
+                        <a class="item" href="https://www.youtube.com/watch?v=yboCldAS8vU" target="_blank">Maze Solving Robot</a>
+                        <a class="item" href="http://spacegrant.alaska.edu/content/alaska-research-cubesat-arc-selected-launch" target="_blank">Satellite</a>
                         <a class="item" href="http://uafasra.github.io/2015module_comp-sci/" target="_blank">ASRA 2015</a>
                         <a class="item" href="http://www.instructables.com/id/Easy-Adjustable-Speed-Pocket-Fan/" target="_blank">Speed Adjust Fan</a>
                         <a class="item" href="projects/Crimson-Deep/Game.html" target="_blank">Indev Phaser Game</a>
