--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
                   <div class="eight wide column">
                      <h3 class="ui header">Welcome to my <a href="https://domains.google.com/about/" target="_blank">domain</a></h3>
                      <p>Hello. It seems that by some chance or fortune you have happened upon this web site, holton.io. In this site you will find personal essays and other writings by me, as well as links to some of my projects and other places you can find me. But who am I? Well, allow me to introduce myself. I am Jasper C. Holton. I am a programmer, scientist, and visionary. I beleive the future calls for those who strive to push the bouandries of human knowledge and exploration.</p>
+                     <h3 class="ui header"><a href="http://www.holton.io/exchange.html" target="_blank">My Blog</a></h3>
+                     <p>I keep a series of personal essays regarding my youth exchange in Germany. They may be enjoyable for you to read, and you can find them <a href="http://www.holton.io/exchange.html" target="_blank">here</a>.</p>
                      <h3 class="ui header">My Projects</h3>
                      <p>On this site you will find information about my recent projects. I have been working on various projects, such as volunteering as an assistant instructor for ASRA, building severall different MicroMouse robots, and working with game design and WebGL shaders.</p>
                      <h3 class="ui header">Site information</h3>
