Start of cool tutorial, new 404 page

--- a/tutorial.html
+++ b/tutorial.html
@@ -2,7 +2,7 @@
 <html class="en">
    <head>
       <meta charset="utf-8">
-      <title>404l</title>
+      <title>Tutorial</title>
             <meta name="description" content="">
       <meta name=viewport content="width=device-width, initial-scale=1">
       <meta name="mobile-web-app-capable" content="yes">
@@ -117,8 +117,38 @@
          </div>
          
          <div class="ui raised very padded text container segment">
-             <h1>404. That's an error.</h1>
-             <p>Looks like there isn't a page at this URL. Click <a href="index.html">here</a> to go back to the home page.</p>
+            <h2 class="ui header">Website Tutorial</h2>
+            <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | Updated September 1, 2015</p>
+            <p>Do you like this website? Well, it's not as hard as you might think to make your own similar website. In this tutorial I will break down how I did it by configuring several different components to work together making a sleek, smooth, and professional looking website. If you have any questions, don't hesitate to contact me.</p>
+            <img src="images/blank.jpg" class="ui large bordered rounded image">
+         </div>
+         <div class="ui raised very padded text container segment">
+            <h2 class="ui header">Github</h2>
+            <p></p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Semantic UI</h2>
+             <p></p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Testing Your HTML</h2>
+             <p></p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Domain Name</h2>
+             <p></p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Clever Tools from Google</h2>
+             <p></p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Mail</h2>
+             <p></p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Putting it All Together</h2>
+             <p>Now that you have configured everything, it's time to put it all together.</p>
          </div>
          
    </body>
@@ -142,6 +172,3 @@
       </script>
    </foot>
 </html>
-
-
-
