--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html class="en">
    <head>
       <meta charset="utf-8">
-      <title>404l</title>
+      <title>404</title>
             <meta name="description" content="">
       <meta name=viewport content="width=device-width, initial-scale=1">
       <meta name="mobile-web-app-capable" content="yes">
@@ -110,7 +110,7 @@
                   <a class="toc item">
                   <i class="sidebar icon"></i>
                   </a>
-                  <a class="item" href="index.html">Home</a>
+                  <a class="item" href="./index.html">Home</a>
                   
                </div>
             </div>
