I fucked it up again. Maybe this will fix it?
I really hope so

--- a/404.html
+++ b/404.html
@@ -118,7 +118,7 @@
          
          <div class="ui raised very padded text container segment">
              <h1>404. That's an error.</h1>
-             <p>Looks like there isn't a page at this URL. Click <a href="index.html">here</a> to go back to the home page.</p>
+             <p>Looks like there isn't a page at this URL. Click <a href="./index.html">here</a> to go back to the home page.</p>
          </div>
          
    </body>
