--- a/404.html
+++ b/404.html
@@ -10,25 +10,25 @@
       <meta http-equiv="Pragma" content="no-cache" />
       <meta http-equiv="Expires" content="0" />
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/site.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/container.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/grid.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/header.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/image.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/menu.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/accordion.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/divider.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/dropdown.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/segment.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/button.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/list.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/icon.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/sidebar.css">
-      <link rel="stylesheet" type="text/css" href="semantic-ui/components/transition.css">
-      <link rel="stylesheet" type="text/css" href="index.css">
+      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/reset.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/semantic.min.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/site.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/container.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/grid.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/header.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/image.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/menu.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/accordion.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/divider.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/dropdown.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/segment.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/button.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/list.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/icon.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/sidebar.css">
+      <link rel="stylesheet" type="text/css" href="/semantic-ui/components/transition.css">
+      <link rel="stylesheet" type="text/css" href="/index.css">
       <!-- Google Analytics Tracking -->
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -118,7 +118,7 @@
          
          <div class="ui raised very padded text container segment">
              <h1>404. That's an error.</h1>
-             <p>Looks like there isn't a page at this URL. Click <a href="./index.html">here</a> to go back to the home page.</p>
+             <p>Looks like there isn't a page at this URL. Click <a href="/index.html">here</a> to go back to the home page.</p>
          </div>
          
    </body>
