Also I added some photos for Phillip and shit
I forgot to add that i did this. I tried to transfer them but he has an
iPhone and transferring is a pain in the ass. I fucking hate it to be
honest.
Wow, my commit details are getting really vulgar. I should stop this.
Jasper out.

--- a/photos/phillip/index.html
+++ b/photos/phillip/index.html
@@ -117,7 +117,7 @@
          </div>
          
          <div class="ui raised very padded text container segment">
-             <h1>Here are your photos</h1>
+             <h1>Here are your photos, Phillip</h1>
              <p><img src="IMG1.jpg" class="ui large bordered rounded image"></p>
              <p><img src="IMG2.jpg" class="ui large bordered rounded image"></p>
              <p><img src="IMG3.jpg" class="ui large bordered rounded image"></p>
