Added a cool photo

--- a/exchange.html
+++ b/exchange.html
@@ -220,6 +220,7 @@
              <img src="images/museum8.jpg" class="ui large bordered rounded image">
              <img src="images/museum9.jpg" class="ui large bordered rounded image">
              <img src="images/museum10.jpg" class="ui large bordered rounded image">
+             <img src="images/museum42.jpg" class="ui large bordered rounded image">
              <p>My favourite part of the museum was the Computer Science exhibition. It included a lot of interesting exhibits and information relating to computer science, which I found fascinating. They even had an old Cray 1 Supercomputer, perfectly preserved.</p>
              <img src="images/museum1.jpg" class="ui large bordered rounded image">
              <p>After visiting the museum, we went back to the Hostel. Then we were given some free time to go and explore a bit of the city, and we did so.x</p>
