Written rough drafts for new entries, added comments, adjustments
Title about covers it. I should be ready to publish tomorrow.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <style>
          .ui.inverted.segment, .ui.primary.inverted.segment {
          padding-bottom: 5%;
-         background-image: url("images/castle1.jpg");
+         background-image: url("images/background.jpg");
          background-size: cover;
          background-position: center center;
          background-repeat: no-repeat;
