Honestly i am too lazy to write an actual commit message

--- a/exchange.html
+++ b/exchange.html
@@ -145,6 +145,15 @@
 
          </div>
 
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Notes on some Site Changes</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 18, 2015</p>
+                 <p>I've been messing around with the code of my site/blog as you may have noticed. I've split this personal essay collecton into a series of pages for easier reading. I've also decreased some of the image quality so the site will load faster. If any of you reading this would like one of the images in full definition and unedited (that's 16 megapixels), just send me an email using jasper(at)holton(dot)io. All of my images are in the public domain, meaning you can do whatever you like with them.</p>
+                 <p>Additionally, I added a comments section (hopefully it works well) so feel <a href="#comments">feel free to leave a comment</a> on what you think. Once again, constructive criticism is welcome.</p>
+                 <img src="images/comments.png" class="ui large bordered rounded image">
+                 <p>Being as vacation is over, I'll be headed back to school tomorrow. I'll spend four hours in the school, and then go by train to Dusseldorf where I will spend another four hours in the Language school. It will most likley be exhausting, but I'll learn a lot and improve my German so I think it's worth it.</p>
+                 <p>Lastly, I may have broke a few things when tweaking the site. If something doesn't work for you, once again please contact me so I can fix it. Thanks for reading!</p>
+         </div>
 
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Deutschland Tour: Day Fourteen</h2>
