--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <div class="ui container">
         <div class="ui stackable inverted divided equal height stackable grid">
             <div class="three wide column">
-                <h4 class="ui inverted header">Find me</h4>
+                <h4 class="ui inverted header">Find Me Online</h4>
                 <div class="ui inverted link list">
                     <a href="mailto:jasper@holton.io" class="item" target="_blank">Contact Me</a>
                     <a href="http://github.com/jcholton" class="item" target="_blank">Github Page</a>
@@ -13,6 +13,8 @@
             <div class="seven wide column">
                 <h4 class="ui inverted header">About This Page</h4>
                 <p>"On résiste à l'invasion des armées; on ne résiste pas à l'invasion des idées." - Victor Hugo</p>
+                <p></p>
+                <p>Copyright © 2015 - Jasper Holton</p>
             </div>
         </div>
     </div>
