--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <a class="item" href="shaders/scope/index.html" target="_blank">Scope</a>
                         </div>
                     </div>
-                    <a class="item" href="sil.html">SIL(new)</a>
+                    <a class="item" href="sil.html">SIL</a>
                     <a class="item" href="https://github.com/jcholton/jcholton.github.io" target="_blank">Github</a>
                 </div>
             </div>
