--- a/sil.html
+++ b/sil.html
@@ -2,7 +2,7 @@
 <html class="en">
    <head>
       <meta charset="utf-8">
-      <title>Exchange Essays</title>
+      <title>Stuff I Like</title>
       <meta name="description" content="">
       <meta name=viewport content="width=device-width, initial-scale=1">
       <meta name="mobile-web-app-capable" content="yes">
@@ -112,31 +112,6 @@
                            <i class="sidebar icon"></i>
                        </a>
                        <a class="item" href="index.html">Home</a>
-                       <div class="ui dropdown item">
-                           Personal Essay Collection
-                           <i class="dropdown icon"></i>
-                           <div class="menu">
-                               <a class="item" href="exchange.html">Exchange Essays</a>
-                               <a class="item" href="code.html">Code Essays</a>
-                           </div>
-                       </div>
-                       <div class="ui dropdown item">
-                           Projects
-                           <i class="dropdown icon"></i>
-                           <div class="menu">
-                               <a class="item" href="https://www.youtube.com/watch?v=yboCldAS8vU" target="_blank">Maze Solving Robot</a>
-                               <a class="item" href="http://spacegrant.alaska.edu/content/alaska-research-cubesat-arc-selected-launch" target="_blank">Satellite</a>
-                               <a class="item" href="http://uafasra.github.io/2015module_comp-sci/" target="_blank">ASRA 2015</a>
-                               <a class="item" href="http://www.instructables.com/id/Easy-Adjustable-Speed-Pocket-Fan/" target="_blank">Speed Adjust Fan</a>
-                               <a class="item" href="projects/Crimson-Deep/Game.html" target="_blank">Indev Phaser Game</a>
-                               <a class="item" href="shaders/sloth/index.html" target="_blank">Shader</a>
-                               <a class="item" href="shaders/storm/index.html" target="_blank">Storm</a>
-                               <a class="item" href="shaders/fractals/index.html" target="_blank">Fractals</a>
-                               <a class="item" href="shaders/fire/index.html" target="_blank">Fire</a>
-                               <a class="item" href="shaders/scope/index.html" target="_blank">Scope</a>
-                           </div>
-                       </div>
-                       <a class="item" href="sil.html">SIL(new)</a>
                        <a class="item" href="https://github.com/jcholton/jcholton.github.io" target="_blank">Github</a>
                    </div>
                </div>
@@ -150,9 +125,11 @@
             <p>If you don't find them on other parts of my site, you will find them here. Links open in a new tab.</p>
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/Surely_You%27re_Joking,_Mr._Feynman!" target="_blank">Surley You're Joking, Mr. Feynman</a> (This is my favourite book)</li>
-                <li><a href="http://aesthetically-obsessed.tumblr.com/" target="_blank">Aesthetic Autismics</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/The_Martian_(Weir_novel)" target="_blank">The Martian</a> (This is also my favourite book)</li>
+                <li><a href="http://www.nezteb.net" target="_blank">Noah Betzen</a> (He's a neat guy, and he's got a neat website)</li>
+                <li><a href="http://aesthetically-obsessed.tumblr.com/" target="_blank">Aesthetic Autismics</a> (A pretty cool blog run by a friend of mine)</li>
                 <li><a href="http://xkcd.com/" target="_blank">XKCD</a></li>
-                <li><a href="http://www.getequal.org/blog/who-said-this-a-kkk-member-or-a-gop-presidential-candidate" target="_blank">#KKKorGOP?</a></li>
+                <li><a href="http://github.com" target="_blank">Github</a></li>
                 <li><a href="https://www.uaf.edu/asra/" target="_blank">ASRA</a></li>
             </ul>
          </div>
